# litchi

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  SECURITY.md  build.rs
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/workflows/: publish.yml  rust-ci.yml
docs/: FEATURE_MATRIX.md  OFFICE_API_GUIDE.md
examples/: docx_comprehensive.rs  extract_xml_content.rs  markdown_conversion.rs  office_crud_demo.rs  parse_doc.rs  parse_docx.rs  parse_docx_ooxml.rs  parse_from_bytes.rs  parse_ppt.rs  parse_pptx.rs  parse_pptx_shapes.rs  read_office_files.rs  test_ole.rs  to_markdown.rs  unified_api.rs
pyo3-litchi/: BUILD.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
pyo3-litchi/python/litchi_py/: __init__.pyi
pyo3-litchi/src/: common.rs  document.rs  lib.rs  presentation.rs  sheet.rs
soapberry-zip/: Cargo.toml  README.md
soapberry-zip/src/: archive.rs  crc.rs  errors.rs  extra_fields.rs  lib.rs  locator.rs  office.rs  path.rs  time.rs  writer.rs
src/: lib.rs
src/common/: binary.rs  bom.rs  encoding.rs  id.rs  metadata.rs  mod.rs  tests.rs  unit.rs  xml_slice.rs
src/common/detection/: detected.rs  functions.rs  iwork.rs  mod.rs  odf.rs  ole2.rs  ooxml.rs  rtf.rs  simd_utils.rs  types.rs  utils.rs
src/common/error/: conversions.rs  mod.rs  types.rs
src/common/shapes/: mod.rs  types.rs
src/common/simd/: cmp.rs  fmt.rs  mod.rs  xor.rs
src/common/style/: color.rs  len.rs  mod.rs
src/common/xml/: escape.rs
src/document/: doc.rs  element.rs  mod.rs  paragraph.rs  run.rs  table.rs  types.rs
src/fonts/: loader.rs  mod.rs  subsetter.rs
src/formula/: mod.rs
src/formula/ast/: builder.rs  mod.rs  node.rs  types.rs
src/formula/latex/: matrix.rs  mod.rs  operators.rs  symbols.rs  templates.rs  utils.rs
src/formula/mtef/: constants.rs  mod.rs  templates.rs
src/formula/omml/: attributes.rs  context.rs  elements.rs  error.rs  lookup.rs  mod.rs  parser.rs  properties.rs  utils.rs
src/images/: blip.rs  bse.rs  extractor.rs  mod.rs  svg.rs  svg_utils.rs
src/images/emf/: converter.rs  device_context.rs  gdi_objects.rs  mod.rs  parser.rs  record_parser.rs  simd_ops.rs  svg_converter.rs
src/images/pict/: converter.rs  data.rs  mod.rs  parser.rs  types.rs
src/images/wmf/: constants.rs  converter.rs  mod.rs  parser.rs  svg_converter.rs
src/iwa/: archive.rs  bundle.rs  document.rs  media.rs  mod.rs  object_index.rs  protobuf.rs  ref_graph.rs  registry.rs  snappy.rs  structured.rs  varint.rs  zip_utils.rs
src/iwa/charts/: metadata_extractor.rs  mod.rs
src/iwa/keynote/: document.rs  mod.rs  show.rs  slide.rs
src/iwa/numbers/: cell.rs  document.rs  mod.rs  sheet.rs  table.rs  table_extractor.rs
src/iwa/pages/: document.rs  mod.rs  section.rs
src/iwa/shapes/: mod.rs  text_extractor.rs
src/iwa/text/: extractor.rs  mod.rs  storage.rs  style.rs
src/markdown/: config.rs  document.rs  mod.rs  presentation.rs  traits.rs  unicode.rs  writer.rs
src/odf/: constants.rs  coordinates.rs  datatype.rs  mod.rs  presentation.rs  spreadsheet.rs  text.rs
src/odf/core/: manifest.rs  metadata.rs  mod.rs  package.rs  writer.rs  xml.rs
src/odf/elements/: attr_parser.rs  bookmark.rs  draw.rs  element.rs  field.rs  meta.rs  mod.rs  namespace.rs  office.rs  parser.rs  style.rs  style_builder.rs  table.rs  table_expansion.rs  tag_matcher.rs  text.rs
src/odf/odp/: builder.rs  mod.rs  mutable.rs  parser.rs  presentation.rs  slide.rs
src/odf/ods/: builder.rs  cell.rs  formula.rs  mod.rs  mutable.rs  parser.rs  row.rs  sheet.rs  spreadsheet.rs
src/odf/odt/: builder.rs  document.rs  mod.rs  mutable.rs  parser.rs
src/ole/: binary.rs  codepage.rs  consts.rs  file.rs  metadata.rs  mod.rs  mtef_extractor.rs  plcf.rs  sprm.rs  sprm_operations.rs
src/ole/doc/: document.rs  footnote.rs  header_footer.rs  hyperlink.rs  image.rs  mod.rs  package.rs  paragraph.rs  shapes.rs  table.rs
src/ole/escher/: container.rs  mod.rs  parser.rs  properties.rs  record.rs  shape.rs  shape_factory.rs  text.rs  types.rs  writer.rs
src/ole/ppt/: current_user.rs  escher_textbox.rs  mod.rs  package.rs  presentation.rs  record_parser.rs  slide.rs  text_prop.rs  text_run.rs
src/ole/writer/: core.rs  difat.rs  directory.rs  fat.rs  header.rs  minifat.rs  mod.rs  tests.rs
src/ole/xls/: autofilter.rs  cell.rs  comments.rs  error.rs  hyperlinks.rs  merged_cells.rs  mod.rs  pivot_table.rs  protection.rs  records.rs  shapes.rs  utils.rs  workbook.rs  worksheet.rs
src/ooxml/: api.rs  custom_properties.rs  error.rs  metadata.rs  mod.rs  pivot.rs  shared.rs
src/ooxml/charts/: axis.rs  chart.rs  legend.rs  mod.rs  models.rs  plot_area.rs  reader.rs  series.rs  types.rs  writer.rs
src/ooxml/common/: mod.rs  properties.rs
src/ooxml/crypto/: agile.rs  mod.rs  ole_encrypted_package.rs  standard2007.rs
src/ooxml/docx/: bookmark.rs  comment.rs  content_control.rs  custom_xml.rs  document.rs  drawing.rs  enums.rs  field.rs  footnote.rs  format.rs  header_footer.rs  hyperlink.rs  image.rs  mod.rs  numbering.rs  package.rs  paragraph.rs  revision.rs  section.rs  settings.rs  statistics.rs  styles.rs  table.rs  template.rs  theme.rs  variables.rs
src/ooxml/drawings/: blip.rs  ext.rs  fill.rs  mod.rs  xfrm.rs
src/ooxml/fonts/: mod.rs  obfuscation.rs
src/ooxml/opc/: constants.rs  error.rs  mod.rs  package.rs  packuri.rs  part.rs  phys_pkg.rs  pkgreader.rs  pkgwriter.rs  rel.rs
src/ooxml/pptx/: animations.rs  backgrounds.rs  customshow.rs  format.rs  handout.rs  hyperlinks.rs  media.rs  mod.rs  (+8 more)
src/presentation/: mod.rs  prs.rs  slide.rs  types.rs
src/rtf/: annotation.rs  bookmark.rs  border.rs  compressed.rs  document.rs  error.rs  field.rs  info.rs  lexer.rs  list.rs  mod.rs  parser.rs  picture.rs  section.rs  shape.rs  stylesheet.rs  table.rs  types.rs  writer.rs
src/sheet/: functions.rs  mod.rs  traits.rs  types.rs  workbook.rs  workbook_types.rs
xml-minifier/: Cargo.toml  README.md
xml-minifier/src/: lib.rs
(+436 files in other folders)
