[package]
name = "litchi-py"
version = "0.0.1"
edition = "2024"

[lib]
name = "litchi_py"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38"] }

# The main litchi library
litchi = { path = "..", default-features = false, features = [
    "ole",
    "ooxml", 
    "odf",
    "iwa",
    "rtf",
    "formula",
    "imgconv"
] }

[profile.release]
# Enable link-time optimization for smaller binary size
lto = true
# Optimize for size
opt-level = 3
# Strip symbols for smaller binary
strip = true
# Single codegen unit for better optimization
codegen-units = 1

